--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,75 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
 
 body {
+  background-color: #06365f;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 70px 60px 30px;
+}
+
+#izqFotos {
+  display: flex;
+  width: 50%;
+  float: left;
+  height: 80%;
+}
+
+#imgCelulares {
+  margin-left: 320px;
+}
+
+.derTexto {
+  display: block;
+  width: 50%;
+  float: right;
+  height: 512px;
+}
+
+#imagenes {
+  display: flex;
+  width: 100%;
+}
+
+#logoIg {
+  text-align: center;
+  padding: 10px;
+}
+
+#homeBut {
+  text-align: center;
+  margin: 30px 0px 0px 70px;
+  padding: 10px;
+  background-color: lightblue;
+  width: auto;
+  height: 20px;
+}
+
+#texInt {
+  display: flex;
+  width: 100%;
+}
+
+#textFondo{
+  border-radius: 5px;
+  width: 500px;
+  background-color:white;
+}
+
+#iphone {
+  margin: 15px;
+}
+
+#android {
+  margin: 15px;
+}
+
+#navBar {
+  margin: 10px;
+  width: 100%;
+  height: 20%;
+  display: inline-block;
+  text-align: center;
+}
+
+a {
+  margin: 5px;
 }
