--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,86 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+body, html {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
 }
+
+.blue{
+  width: 100%;
+  height: 300px;
+  background-image: url(../images/bgtile.png); 
+  position: absolute;
+}
+
+.phones{
+  position: relative;
+  left: 200px;
+  top: 106px;
+}
+
+.logo-button{
+  position: relative;
+  left: 580px;
+  bottom: 389px;
+  width: 505px;
+}
+
+.brand{
+  width: 300px;
+}
+
+
+.log-in{
+  display: inline-block;
+}
+
+.log-in img{
+  position: relative;
+  top: 15px;
+  left: 108px;
+}
+
+.log-in p{
+  position: relative;
+  left: 140px;
+  bottom: 29px;
+}
+
+.main{
+  background-image: url(../images/frame.png);
+  height: 200px;
+  width: 505px;
+  background-repeat: no-repeat;
+  position: relative;
+  left: 576px;
+  bottom: 406px;
+}
+
+.main h3{
+  position: relative;
+  left: 30px;
+  top: 30px;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.main p{
+  position: relative;
+  font-size: 16px;
+  width: 410px;
+  top: 20px;
+  left: 30px;
+}
+
+.main img{
+  position: relative;
+  left: 50px;
+  top: 25px;
+}
+
+.playstore{
+  padding-left: 35px;
+}
+
