--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,7 @@ body {
   height: 500px;
   display: block;
   float: left;
+  position: fixed;
 }
 
 .right-bar {
@@ -28,6 +29,8 @@ body {
   width: 70%;
   float: right;
   display: block;
+  position: relative;
+
 }
 
 footer {
