--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,94 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+body, html {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
 }
+.background{
+  background: #1c5380;
+  width: 100%;
+  height: 50%;
+  position: absolute;
+}
+#phone{
+  position: relative;
+  left: 10%;
+  width: 1500px;
+}
+#brand{
+  position: relative;
+  left: 15%;
+  width: 1300px;
+  bottom: 2000px;
+}
+button{
+  position: relative;  
+  left: 20%;
+  width: 500px;
+  height: 250px;
+  bottom: 2100px;
+  background-color: #06365f;
+  color: white;
+  border: none;
+}
+button > #home{
+  width: 150px;
+}
+
+button > span{
+  font-size: 100px;
+}
+
+
+h2{
+  position: relative;  
+  left: 45%;
+  width: 2000px;
+  height: 600px;
+  bottom: 2000px;  
+  background-color: white;
+  color: #06365f;
+  font-size: 150px;
+}
+p{
+  position: relative;  
+  width: 2000px;
+  height: 800px;
+  bottom: 2200px;  
+  left: 45%;
+  background-color: white;
+  font-size: 75px;
+}
+#get{
+  position: relative;  
+  width: 1500px;
+  height: 325px;
+  bottom: 2200px;  
+  left: 45%;
+  display: flex;
+  align-content: unset;
+}
+
+#iphone{
+  width: 700px;
+  height: 300px;
+}
+#android{
+  width: 700px;
+  height: 300px;
+}
+footer{
+  position: relative;  
+  width: 3000px;
+  height: 100px;
+  bottom: 2750px;  
+  left: 25%;
+  color: #06365f;
+  font-size: 80px;
+}
+footer > span{
+  color: gray;
+}
+
