--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,136 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: repeating-linear-gradient(#1C5380, #1C5380 49.9%, white 50.1%, white 100%);
+}
+
+.body {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 20px;
+  width: 800px;
+}
+
+footer {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 0 auto;
+  padding: 50px;
+  width: 800px;
+}
+
+.phone {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 0 auto;
+  padding: 50px;
+}
+
+.frame {
+  background-image: url("../images/frame.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  height: 400px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.top {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+}
+
+h2 {
+  width: 250px;
+  text-align: left;
+}
+
+div .header {
+  display: flex;
+  align-self: flex-start;
+  padding-left: 40px;
+  padding-top: 20px;
+  font-size: 1rem;
+  color: #06365f;
+}
+
+.footer a {
+  font-size: 1rem;
+  color: #1c5380;
+  text-decoration: none;
+}
+
+.footer {
+display: flex;
+flex-wrap: nowrap;
+flex-direction: row;
+justify-content: center;
+align-content: center;
+align-items: center;
+font-weight: bold;
+}
+
+.copy {
+  color: grey;
+}
+
+p {
+  width: 425px;
+  margin: 5px;
+  font-weight: lighter;
+}
+
+.download {
+  margin: 15px;
+  display: flex;
+  align-self: flex-start;
+}
+
+.android {
+  padding: 10px;
+}
+
+.iphone {
+  padding: 10px;
+}
+
+button {
+  background-color: #1c5380;
+  text-decoration: none;
+  font-weight: bold;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+  box-shadow:inset 0px 0px 0px 0px #7a8eb9;
+	background:linear-gradient(to bottom, #1c5380 5%, #1c5380 100%);
+	border-radius:3px;
+	border:1px solid #314179;
+	color:#ffffff;
+	padding:11px 10px;
+	text-decoration:none;
+}
+
+.login{
+  align-self: center;
+  padding: 3px;
 }
