--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,113 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(0deg, white 60%, #1c5380 40%);
+}
+
+.all-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 6em 8em 3em 8em;
+}
+
+.rest-info {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.pictures {
+  display: flex;
+  flex-direction: row;
+}
+
+.text {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+}
+
+.badges {
+  display: flex;
+  flex-direction: row;
+}
+
+a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style-type: none;
+  width: 70%
+}
+
+.pictures {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 10px 10px 10px;
+  align-items: center;
+}
+
+.log-in {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #225d8d;
+  border-color: #06365f;
+  border-width: 1px;
+  padding: 5px 10px;
+  margin: 30px 5px 30px 0;
+}
+
+.log-in a {
+  color: white;
+}
+
+.log-in p {
+  margin: 0;
+}
+
+.ig-image {
+  height: 75px;
+}
+
+.text {
+  padding-left: 3em;
+  padding-right: 4em;
+  margin-bottom: 1em;
+}
+
+h2 {
+  color: #06365f;
+  width: 63%;
+}
+
+.badges {
+  display: flex;
+  justify-content: space-around;
+  padding: 0 2em;
+  margin-right: 3em;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 55%;
+  margin-right: 2em;
+  margin-bottom: 2em;
+}
+
+nav p {
+  color: rgb(150, 150, 150, 0.75) 
+}
