--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,92 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  margin-top: 15vh;
+  font-size: 16px;
+
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fullcontent {
+  padding: 2rem;
+  max-width: 40vw;  
+}
+
+.instagramlogoheader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.loginbutton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2rem;
+  padding: .4rem;
+	background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+	border-radius:5px;
+	border:1px solid #1c5380;
+	cursor:pointer;
+	color:#ffffff;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #283966;
+}
+
+.loginbutton > a {
+  text-decoration: none;
+  color: white;
+  padding-left: .5rem;
+  padding-right: .3rem;
+}
+
+article {
+  background-color: white;
+  border-radius: 8px 8px 8px 8px;
+  box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.34);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: .6rem 2rem 1rem 2rem;
+ 
+
+}
+
+
+.articlecontent {
+margin-bottom: 2rem;
+}
+
+
+.articlecontent > h1 {
+  color: #06365f;
+  font-weight: bold;
+
+}
+
+
+
+footer > ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+
+footer > ul > li {
+  padding: 8px;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-weight: bold;
+  font-size: .8rem;
+}
+
+.copyright {
+  color: grey;
 }
