--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,173 @@
 /*
+I use different colors because these colors look darker than the original
+dark blue: #507da1,
+light blue: #376387
+
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
+
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+* {
   margin: 0;
+  padding: 0;
+}
+
+body {
+  font: 200 16px/1.5 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+h1 {
+  color: #06365f;
+}
+
+p {
+  font-weight: 400;
+  color: #313131;
+}
+
+.blue-bg {
+  background-image: url(../images/bgtile.png);
+  width: 100%;
+  height: 280px;
+  position: absolute;
+  z-index: -1;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 8px;
+}
+
+/* mobile */
+@media (max-width: 590px) {
+  .blue-bg {
+    height: 80px;
+  }
+
+  .header-container {
+    padding: 0px;
+  }
+
+  .container {
+    padding: 20px 20px !important;
+  }
+
+  .img-bg {
+    background-image: none !important;
+    padding: 40px 10px 0 10px !important;
+  }
+
+  .logo {
+    width: 170px;
+  }
+
+  footer ul {
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0 10px !important;
+  }
+
+  footer li {
+    padding: 2px 10px !important;
+  }
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 60px 90px;
+}
+
+.container > img {
+  margin-right: 45px;
+}
+
+@media (max-width: 1000px) {
+  .container > img {
+    display: none;
+  }
+}
+
+.img-bg {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  max-width: 504px;
+  padding: 30px 40px;
+}
+
+.badge {
+  padding: 5px 15px 0 0;
+  align-self: flex-end;
+}
+
+p {
+  padding-top: 10px;
+}
+
+p:last-of-type {
+  padding-bottom: 30px;
+}
+
+.logo {
+  max-width: 255px;
+}
+
+.btn {
+  background: repeating-linear-gradient(#6a94b3, #3e729a);
+  padding: 0 10px;
+  height: 40px;
+  border-radius: 3px;
+  color: rgba(255, 255, 255, 0.8) !important;
+  box-shadow: 0 0 2px 2px #06365f33;
+  text-decoration: none;
+  font-weight: 400;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: nowrap;
+  .;
+}
+
+.header-container a {
+  list-style-image: url(../images/home.png);
+  color: #fff;
+  text-decoration: none;
+}
+
+.btn img {
+  padding-right: 10px;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+@media (max-width: 1000px) {
+  footer ul {
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0 80px;
+  }
+}
+
+footer li {
+  padding: 10px;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: #b1b1b1;
+}
+
+footer a {
+  text-decoration: none;
+  color: #06365f;
 }
