--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,77 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #1c5380;
+}
+
+h1 {
+  color: #06365f;
+}
+
+.mainFlex {
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+  width: 60vw;
+  margin: 0 auto;
+}
+
+.phones {
+  border: 1px solid black;
+}
+
+.middlePart {
+  border: 1px solid black;
+  width: 30vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.instaPart {
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+}
+
+.instaLogo {
+  width: 20vw;
+}
+
+.articel {
+  border: 1px solid black;
+  /*padding: 0 5px;
+  background-image: url("/images/frame.png")*/
+}
+
+.appleGoogleLogos {
+  border: 1px solid black;
+}
+
+.footer {
+  border: 1px solid black;
+}
+
+.footer ul {
+  border: 1px solid black;
+  width: 50vw;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer li {
+  list-style: none;
+  /*text-align: center;*/
+}
+
+.footer a[href="#copyright"]{
+  color: #a8a8a8;
+}
+
+.footer a {
+  color: #3e6c94;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 700;
 }
