--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,77 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+button {
+  background-image: url(../images/home.png);
+  background-size: cover;
+  height: 50px;
+  width: 60px;
+  padding: 10px;
+}
+
+.nav {
+  display: flex;
+  align-content: center;
+}
+
+
+body div {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  background-image: url(../images/frame.png);
+  background-size: cover;
+  background-blend-mode: overlay;
+  background-color: #1c5380;
+  padding: 0;
+
+
+}
+
+body div {
+  display: flex;
+  flex-direction: row;
+  padding-top: 100px;
+  padding-bottom: 20px;
+
+
+}
+
+
+footer {
+  display: flex;
+}
+
+
+footer ul {
+  display: flex;
+  list-style: none;
+}
+
+.right-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 400px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 10px;
+  padding-bottom: 50px;
+
+}
+
+
+.description {
+  border: 3px;
+  box-shadow: 3px 3px 5px 6px #ccc;
+  background-color: white;
+
+}
+
+.phone {
+  padding-left: 100px;
 }
