--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,93 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+header {
+  background-color: #3a6f9b;
+  height: 40vh;
+}
+.home{
+  width: 23px;
+  height: 20px;
+  position: relative;
+  left: 37px;
+  top: 7px;
+}
+.logIn{
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 20px;
+
+}
+button{
+  width: 85px;
+  margin-top: 19px;
+    height: 40px;
+    padding-left: 30px;
+    background-color: #3a6f9b;
+    border-radius: 6px;
+    color: white;
+    font-size: 10pt ;
+}
+#wrapper {
+  position: relative;
+  bottom: 160px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.imgBox {
+  width: 55%;  
+}
+#box-wrapper{
+  border-radius: 0.5em;
+  width: 70%;
+  border: 5px solid white;
+  background-color: white; 
+  display: flex;
+  flex-direction: column;
+}
+.textcontainer h1 {
+  color:#06365f;
+  font-size: 24pt;
+  margin: -0.5em;
+  padding: 20px 0 20px 21px;
+  width: 330px;
+}
+
+.textcontainer p {
+  color: rgb(70, 69, 69);
+  font-size: 12pt;
+  width: 430px;
+}
+.install img{
+  margin: 0.5em;
+}
+.textcontainer{
+  margin: 0.5em;
+}
+
+
+.divFooter {
+  font-size: 12px;
+  list-style: none; 
+  text-transform: uppercase;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+
+.navStyle {
+  font-size: 12px;
+   
+}
+.navStyle ul li {
+  
+  text-decoration: none;
+  color: #1c5380;
+  display:inline-block;
+  margin: 0.5em;  
+}
+.copy {
+  color: #8e8e8e;
+}
