--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,118 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
 }
+
+#back{
+  background-color: #637e9b;
+  height: 32vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  z-index: -99999999;
+}
+
+#super{
+  display:flex;
+  flex-direction: row;
+  justify-content:space-evenly;
+  margin: 100px;
+}
+
+#box{
+  width: 50vw;
+}
+
+ #phones-image{
+   margin-top:40px;
+} 
+
+
+
+
+#instagram-login{
+  display:flex;
+  flex-direction: row;
+  justify-content:space-between;
+  margin-top: 50px;
+}
+
+#instagram-login img{
+  height: 40px;
+}
+
+#instagram-login a{
+  padding:8px;
+  border-width: 1px;
+  border-radius: 5px;
+  border-color:#4c7598;
+  border-style: solid;
+  background: linear-gradient(#6c90b0,#7496b5);
+  text-decoration: none;
+  color:#ffffff;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
+#instagram-login a img{
+  height: 20px;
+  margin-right: 8px;
+}
+
+#content{
+  padding: 32px;
+  background-image: url(../images/frame.png);
+  background-position: top;
+  background-size: contain;
+  background-repeat: no-repeat;
+} 
+
+#content p{
+  padding: 10px;
+}
+
+#store{
+  display: flex;
+  flex-direction: row;
+}
+
+#store img{
+  margin-top: 32px;
+  margin-right: 30px;
+}
+
+
+
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 850px;
+  margin: 0 auto;
+  margin-top: 25px;
+}
+
+li{
+  color:white;
+  text-decoration: none;
+  list-style-type: none;
+  font-weight: bold;
+  color: #06365f;
+  /* margin-right: 20px; */
+}
+
+ul p{
+  color:grey;
+  font-weight: bold;
+}
+
