--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,7 @@ body {
   margin: 30px 40px 10px 40px;
   width: 50%;
 
-  /* font-size: 1.5em; */
+  font-size: 1.3em;
   font-weight: 600;
   color: #06365f;
 }
